compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_return_stmt_in_procedure.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: proc q return end q

---
"q"@(FileId(1), 5..6) [Declared]: procedure -> void
"<root>"@(dummy) [Declared]: <error>

