compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_return_stmt_in_top_level.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: return
---
"<root>"@(dummy) [Module(No)]: <error>

