compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_set_cons_call_all.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type s : set of boolean\nvar _ := s(all)\n"

---
"s"@(FileId(1), 9..23) [Declared]: <error>
"s"@(FileId(1), 5..6) [Resolved(Type)]: set[DefId(LibraryId(0), LocalDefId(0))] of boolean
"_"@(FileId(1), 28..29) [Declared]: set[DefId(LibraryId(0), LocalDefId(0))] of boolean
"<root>"@(dummy) [Declared]: <error>

