compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_set_cons_call_all_err_extra_args_range.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type s : set of boolean\nvar b : boolean\nvar _ := s(1 .. 2, all, 3 .. 4)\n"

---
"<anonymous>"@(FileId(1), 9..23) [Declared]: <error>
"s"@(FileId(1), 5..6) [Resolved(Type)]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"b"@(FileId(1), 28..29) [Declared]: boolean
"_"@(FileId(1), 44..45) [Declared]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 49..50: constructor call has extra arguments
| error in file FileId(1) for 49..50: call has extra arguments
| note in file FileId(1) for 59..62: this `all` also covers the rest of the arguments
error in file FileId(1) at 51..57: cannot use range expression here
| error in file FileId(1) for 51..57: range expressions aren't supported in set constructors
error in file FileId(1) at 64..70: cannot use range expression here
| error in file FileId(1) for 64..70: range expressions aren't supported in set constructors
