compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_set_cons_call_args_err_wrong_binding.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type s : set of boolean\ntype b : boolean\nvar _ := s(b)\n"

---
"s"@(FileId(1), 9..23) [Declared]: <error>
"s"@(FileId(1), 5..6) [Resolved(Type)]: set[DefId(LibraryId(0), LocalDefId(0))] of boolean
"b"@(FileId(1), 29..30) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(2))] of boolean
"_"@(FileId(1), 45..46) [Declared]: set[DefId(LibraryId(0), LocalDefId(0))] of boolean
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 52..53: cannot use `b` as an expression
| error in file FileId(1) for 52..53: `b` is a reference to a type, not a variable
| note in file FileId(1) for 29..30: `b` declared here
